--- a/src/app/pages/executuve/tabs-doctors/tabs-doctors.page.html
+++ b/src/app/pages/executuve/tabs-doctors/tabs-doctors.page.html
@@ -3,7 +3,19 @@
     <ion-toolbar color="mango">
       <ion-title>
         <ion-icon name="git-network-outline"></ion-icon> Doctors
+        
       </ion-title>
+      <ion-buttons
+      slot="end"
+      class="buttons-last-slot sc-ion-buttons-ios-h sc-ion-buttons-ios-s ios hydrated"
+    >
+      <ion-button
+
+        color="chh-css-primary2"
+        class="ios button button-clear ion-activatable ion-focusable hydrated"
+        >&nbsp; <ion-icon name="reorder-four-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
     </ion-toolbar>
    
   </div>
@@ -34,6 +46,38 @@
           (ionChange)="filterList()"
           mode="ios"
         ></ion-searchbar>
+        <ion-segment scrollable value="heart" class="scrollable-element" (ionChange)="segmentChanged($event)" value="ALL">
+          <ion-segment-button value="ALL" >
+            All
+          </ion-segment-button>
+          <ion-segment-button value="ANES">
+            ANE
+          </ion-segment-button>
+          <ion-segment-button value="FMED">
+            FAM
+          </ion-segment-button>
+          <ion-segment-button value="MED">
+            INM
+          </ion-segment-button>
+          <ion-segment-button value="OB">
+            OB
+          </ion-segment-button>
+          <ion-segment-button value="ORTH">
+            ORT
+          </ion-segment-button>
+          <ion-segment-button value="PAT">
+            PAT
+          </ion-segment-button>
+          <ion-segment-button value="PED">
+            PED
+          </ion-segment-button>
+          <ion-segment-button value="RAD">
+            RAD
+          </ion-segment-button>
+          <ion-segment-button value="SUR">
+            SUR
+          </ion-segment-button>
+        </ion-segment>
       </ion-col>
     </ion-row>
   </ion-grid>
@@ -47,6 +91,7 @@
     <ion-row>
       <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4">
         <ng-container>
+
           <div *ngFor="let x of listOfDoctors">
 
          
