--- a/src/app/pages/executuve/tabs-dashboard/tabs-dashboard.page.html
+++ b/src/app/pages/executuve/tabs-dashboard/tabs-dashboard.page.html
@@ -164,6 +164,23 @@
           <ion-card   mode="ios"  class="pointer">
             <div id="PieChart"></div>
           </ion-card>
+          <!--ion-card   >
+            <div id="TreeMap"></div>
+          </ion-card>
+          <ion-card   >
+            <div id="TreeMap1"></div>
+          </ion-card-->    
+          
+          
+          <ion-card   >
+         <!-- Total ADMISSION -->
+        
+
+          <!--app-chh-app-executive-dept
+            [name]="chhtextcolor">
+
+          </app-chh-app-executive-dept-->
+          </ion-card>      
         </ion-grid>
 
 
