newsfeed on exec, show session expired on token expiry, updated logic on user settings

--- a/src/app/pages/executuve/tabs/tabs.page.html
+++ b/src/app/pages/executuve/tabs/tabs.page.html
@@ -4,10 +4,10 @@
       <ion-icon name="stats-chart-outline"></ion-icon>
       <ion-label class="tab-font-family">Dashboard</ion-label>
     </ion-tab-button>
-    <!--ion-tab-button id="button-news-feed" tab="news-feed">
+    <ion-tab-button id="button-news-feed" tab="newsfeed">
       <ion-icon name="newspaper-outline"></ion-icon>
-      <ion-label class="tab-font-family">1</ion-label>
-    </ion-tab-button-->
+      <ion-label class="tab-font-family">Newsfeed</ion-label>
+    </ion-tab-button>
     <ion-tab-button id="button-news-feed" tab="doctors">
       <ion-icon name="git-network-outline"></ion-icon>
       <ion-label class="tab-font-family">Doctors</ion-label>
