--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -34,8 +34,13 @@
           class="my-custom-slider"
         >
           <ion-card class="form-wrapper">
+            <img src="assets/img/orgwide-png.png" />
             <ion-card-content>
-              <ion-item>
+          
+              
+               
+  
+              <ion-item style="margin-top:-10px">
                 <ion-icon name="mail"></ion-icon>
                 <ion-input
                   type="text"
