--- a/src/app/pages/executuve/tabs/tabs.page.html
+++ b/src/app/pages/executuve/tabs/tabs.page.html
@@ -15,7 +15,7 @@
 
     <ion-tab-button id="button-in-patients" tab="allpatients">
       <ion-icon name="person-circle-outline"></ion-icon>
-      <ion-label class="tab-font-family">All Patients</ion-label>
+      <ion-label class="tab-font-family">Patients</ion-label>
     </ion-tab-button>
 
 
