executive desktop view

--- a/src/app/pages/executuve/tabs/tabs.page.html
+++ b/src/app/pages/executuve/tabs/tabs.page.html
@@ -46,14 +46,41 @@
             >
               {{this.constants.MENU__VALUE__DASHBOARD}}
             </ion-button>
-           
-
-
+            <ion-button
+            id="button-settings"
+            fill="clear"
+            routerLink="/executive/newsfeed"
+            routerDirection="root"
+            routerLinkActive="active-link"
+            class="link"
+            >
+              Newsfeed
+          </ion-button>        
+            <ion-button
+              id="button-settings"
+              fill="clear"
+              routerLink="/executive/doctors"
+              routerDirection="root"
+              routerLinkActive="active-link"
+              class="link"
+              >
+                Doctors
+            </ion-button>    
+            <ion-button
+              id="button-settings"
+              fill="clear"
+              routerLink="/executive/allpatients"
+              routerDirection="root"
+              routerLinkActive="active-link"
+              class="link"
+              >
+              Patients
+            </ion-button>  
             
             <ion-button
               id="button-settings"
               fill="clear"
-              routerLink="/menu/settings"
+              routerLink="/executive/settings"
               routerDirection="root"
               routerLinkActive="active-link"
               class="link"
