moved settings to top

--- a/src/app/pages/executuve/tabs-allpatients/tabs-allpatients.page.html
+++ b/src/app/pages/executuve/tabs-allpatients/tabs-allpatients.page.html
@@ -4,6 +4,15 @@
       <ion-title>
         <ion-icon name="person-circle-outline"></ion-icon> Patients
       </ion-title>
+      <ion-buttons
+      slot="end"
+      class="buttons-last-slot sc-ion-buttons-ios-h sc-ion-buttons-ios-s ios hydrated"
+    >
+    <ion-button
+    (click)="settings()"
+      >&nbsp; <ion-icon name="settings-outline" class="icon–big"></ion-icon>
+    </ion-button>
+  </ion-buttons>
     </ion-toolbar>
    
   </div>
