--- a/src/app/pages/executuve/tabs-dashboard/tabs-dashboard.page.html
+++ b/src/app/pages/executuve/tabs-dashboard/tabs-dashboard.page.html
@@ -4,6 +4,16 @@
       <ion-title>
         <ion-icon name="stats-chart-outline"></ion-icon> {{this.constants.MENU__VALUE__DASHBOARD}}
       </ion-title>
+      <ion-buttons
+       
+        slot="end"
+        class="buttons-last-slot sc-ion-buttons-ios-h sc-ion-buttons-ios-s ios hydrated"
+      >
+      <ion-button
+      (click)="settings()"
+        >&nbsp; <ion-icon name="settings-outline" class="icon–big"></ion-icon>
+      </ion-button>
+    </ion-buttons>
     </ion-toolbar>
   </div>
 </ion-header>
