--- a/src/app/pages/executuve/tabs-doctors/tabs-doctors.page.html
+++ b/src/app/pages/executuve/tabs-doctors/tabs-doctors.page.html
@@ -5,7 +5,15 @@
         <ion-icon name="git-network-outline"></ion-icon> Doctors
         
       </ion-title>
-  
+      <ion-buttons
+      slot="end"
+      class="buttons-last-slot sc-ion-buttons-ios-h sc-ion-buttons-ios-s ios hydrated"
+    >
+    <ion-button
+    (click)="settings()"
+      >&nbsp; <ion-icon name="settings-outline" class="icon–big"></ion-icon>
+    </ion-button>
+  </ion-buttons>
     </ion-toolbar>
    
   </div>
