--- a/src/app/pages/executuve/tabs/tabs.page.html
+++ b/src/app/pages/executuve/tabs/tabs.page.html
@@ -19,10 +19,10 @@
     </ion-tab-button>
 
 
-    <ion-tab-button id="button-settings" tab="settings">
+    <!--ion-tab-button id="button-settings" tab="settings">
       <ion-icon name="settings-outline"></ion-icon>
       <ion-label class="tab-font-family">Settings</ion-label>
-    </ion-tab-button>
+    </ion-tab-button-->
   </ion-tab-bar>
 </ion-tabs>
 
