added install instructions for ios

--- a/src/app/pages/index/index.page.html
+++ b/src/app/pages/index/index.page.html
@@ -135,7 +135,7 @@
     <ion-slide class="ion-padding" *ngIf="iosVerifier">
       <img src="assets/onboarding/iOS-1.png" />
       <div class="slider-text">
-        <p>Visit <a href="doki.chonghua.com.ph">doki.chonghua.com.ph</a> on SAFARI<br /> if Your already on safari click next</p>
+        <p>Visit <a href="doki.chonghua.com.ph">doki.chonghua.com.ph</a> on Safari<br /> if you are already on safari click next</p>
       </div>
       <div class="navigator">
         <ion-button color="primary" fill="clear" (click)="skip()">SKIP</ion-button>
@@ -180,7 +180,7 @@
       </div>
     </ion-slide>
     <ion-slide class="ion-padding" *ngIf="iosVerifier">
-      <img src="assets/onboarding/iOS-8.png" />
+      <img src="assets/onboarding/iOS-8-1.png" />
       <div class="slider-text">
         <p>Tap Add.</p>
       </div>
