--- a/src/app/pages/executuve/tabs-settings/tabs-settings.page.html
+++ b/src/app/pages/executuve/tabs-settings/tabs-settings.page.html
@@ -33,7 +33,7 @@
               <ion-label style="margin-top: -5px;">
                 <ion-item class="ion-no-padding">
                   <h2 class="ion-text-wrap" style="padding-top: 20px;">
-                    {{this.constants.NAME_PREFIX__CODE__DOCTOR.toLocaleUpperCase()}} {{ x.firstName }} {{ x.lastName }}
+                    {{ x.firstName }} {{ x.lastName }}
                   </h2>
                 </ion-item>
               </ion-label>
