--- a/src/app/chh-web-components/chh-app-newsfeed/chh-app-newsfeed.component.html
+++ b/src/app/chh-web-components/chh-app-newsfeed/chh-app-newsfeed.component.html
@@ -32,7 +32,7 @@
   </span>
 
 
-    <span  class="padding-left-30 font-weight-500 font-size-20"> &nbsp;&nbsp;Newsfeed </span>
+    <span  class="padding-left-30 font-weight-500 font-size-20"> &nbsp;&nbsp;News Feed </span>
   </ion-toolbar>
   <!-- <ion-toolbar color="mango">
     <ion-title> Professional Fee </ion-title>
