--- a/src/app/pages/executuve/tabs-newsfeed/tabs-newsfeed.page.scss
+++ b/src/app/pages/executuve/tabs-newsfeed/tabs-newsfeed.page.scss
@@ -1,3 +1,13 @@
 .icon–big {
     font-size: 200%;
   }
+
+  .use-cover-background {
+    background-size: cover;
+    background-position: top;
+  }
+  .square {
+    margin: 0px 0;
+    width: 100%;
+    height: 200px;
+  }
