--- a/src/app/pages/executuve/tabs-dashboard/tabs-dashboard.page.html
+++ b/src/app/pages/executuve/tabs-dashboard/tabs-dashboard.page.html
@@ -183,13 +183,87 @@
           
           
           <ion-card   >
-         <!-- Total ADMISSION -->
+            <ion-row>
+              <ion-col size-xs="12" class="ion-text-center">
+                <h3 style="color:black">Critical : 
+                  <b *ngIf="!criticalTV33">{{criticalT}}</b>
+                  <ion-spinner name="crescent" *ngIf="criticalTV33"></ion-spinner>
+                </h3>
+              </ion-col>
+              <ion-col size-xs="6" >
+                  <ion-item id="ion-item-ac" lines="none" routerLink='/' routerDirection="back">
+                    <ion-avatar slot="start">
+                      <chh-app-text-avatar [text]='tTC' [color]="chhgreen" [textColor]="chhtextcolor"></chh-app-text-avatar>
+                    </ion-avatar>
+                    <ion-label>
+                      <h2>
+                        <b *ngIf="!criticalTV33">{{criticalC}}</b>
+                        <ion-spinner name="crescent" *ngIf="criticalTV33"></ion-spinner>
+                      </h2>
+                    </ion-label>
+                  </ion-item>
+              </ion-col>
+              <ion-col size-xs="6" >
+                  <ion-item id="ion-item-dn" lines="none" routerLink='/' routerDirection="back">
+                    <ion-avatar slot="start">
+                      <chh-app-text-avatar [text]='tTM' [color]="chhred" [textColor]="chhtextcolor"></chh-app-text-avatar>
+                    </ion-avatar>
+                    <ion-label>
+                      <h2>
+                          <b *ngIf="!criticalTV33">{{criticalM}}</b>
+                          <ion-spinner name="crescent" *ngIf="criticalTV33"></ion-spinner>
+                      </h2>
+  
+                    </ion-label>
+                  </ion-item>
+              </ion-col>
+  
+            </ion-row>
+  
+  
         
-
-          <!--app-chh-app-executive-dept
-            [name]="chhtextcolor">
-
-          </app-chh-app-executive-dept-->
+                <ion-item class="ion-no-padding ion-no-margin" ></ion-item>
+                <ion-row>
+                  <ion-col size-xs="12" class="ion-text-center">
+                    <h3 style="color:black">Non Critical : 
+                      <b *ngIf="!criticalTV33">{{noncriticalT}}</b>
+                      <ion-spinner name="crescent" *ngIf="criticalTV33"></ion-spinner>
+                    </h3>
+                  </ion-col>
+                  <ion-col size-xs="6" >
+                      <ion-item id="ion-item-ac" lines="none" routerLink='/' routerDirection="back">
+                        <ion-avatar slot="start">
+                          <chh-app-text-avatar [text]='tTC' [color]="chhgreen" [textColor]="chhtextcolor"></chh-app-text-avatar>
+                        </ion-avatar>
+                        <ion-label>
+                          <h2>
+                            <b *ngIf="!criticalTV33">{{noncriticalC}}</b>
+                            <ion-spinner name="crescent" *ngIf="criticalTV33"></ion-spinner>
+                          </h2>
+                        </ion-label>
+                      </ion-item>
+                  </ion-col>
+                  <ion-col size-xs="6" >
+                      <ion-item id="ion-item-dn" lines="none" routerLink='/' routerDirection="back">
+                        <ion-avatar slot="start">
+                          <chh-app-text-avatar [text]='tTM' [color]="chhred" [textColor]="chhtextcolor"></chh-app-text-avatar>
+                        </ion-avatar>
+                        <ion-label>
+                          <h2>
+                              <b *ngIf="!criticalTV33">{{noncriticalM}}</b>
+                              <ion-spinner name="crescent" *ngIf="criticalTV33"></ion-spinner>
+                          </h2>
+      
+                        </ion-label>
+                      </ion-item>
+                  </ion-col>
+      
+                </ion-row>
+      
+      
+            
+                    <ion-item class="ion-no-padding ion-no-margin" ></ion-item>
+      
           </ion-card>      
         </ion-grid>
 
