--- a/src/app/pages/executuve/tabs-allpatients/tabs-allpatients.page.html
+++ b/src/app/pages/executuve/tabs-allpatients/tabs-allpatients.page.html
@@ -71,7 +71,7 @@
           <div *ngFor="let x of listOfPatients">
 
          
-            <ion-card (click)="detail(x.patientName)" mode="ios"  class="pointer">
+            <ion-card (click)="detail(x)" mode="ios"  class="pointer">
               
               <ion-item lines="none">
                 <ion-avatar slot="start">
@@ -90,26 +90,8 @@
  
                   </ion-item>
  
-                  <div
-                    *ngIf="x.admission_status == this.constants.ADMISSION_STATUS__CODE__FOR_DISCHARGE  && (x.is_posted ==this.constants.ANY__VALUE__NULL|| x.is_posted ==this.constants.NUMBER__VALUE__ZERO ) && x.doctor_prof_fee !=this.constants.ANY__VALUE__NULL"
-                  >
-                    <!--Patient For Discharge-->
-                    <!--Buffer 0.85 -->
-                    <ion-progress-bar
-                      value=".75"
-                      buffer="1"
-                      color="warning"
-                    ></ion-progress-bar>
-                  </div>
-                  <div
-                    *ngIf="x.admission_status == this.constants.ADMISSION_STATUS__CODE__FOR_DISCHARGE  && x.is_posted == '1' && x.doctor_prof_fee !=this.constants.ANY__VALUE__NULL"
-                  >
-                    <!--Patient For Discharge-->
-                    <ion-progress-bar
-                      value="1"
-                      color="mango"
-                    ></ion-progress-bar>
-                  </div>
+
+      
                   <ion-row
                     class="ion-no-padding"
                     lines="none"
@@ -133,7 +115,8 @@
                       <ion-icon name="bed-outline" slot="start"></ion-icon> Room
                       {{x.roomNo}}<br />
                  
-      
+                      <ion-badge color="warning" slot="end" *ngIf="x.admission_status == 'DN'">
+                        for discharge</ion-badge>
                       <!--ion-icon name="body-outline"></ion-icon>Patient Journey<br /-->
                     </p>
                     <br />
