Disable Covid NonCovid Average Admissions for the current year.

--- a/src/app/pages/executuve/tabs-dashboard/tabs-dashboard.page.html
+++ b/src/app/pages/executuve/tabs-dashboard/tabs-dashboard.page.html
@@ -269,7 +269,7 @@
           
 
 
-          <ion-card   mode="ios"  class="pointer">
+          <!-- <ion-card   mode="ios"  class="pointer">
             <div id="stackedBar"></div>
                         <ion-col size-xs="12" class="ion-text-center" *ngIf="stackedBar">
               <h3 >
@@ -278,7 +278,7 @@
               </h3>
             </ion-col>
             <ion-spinner name="crescent" *ngIf="stackedBar"></ion-spinner>
-          </ion-card>
+          </ion-card> -->
 
 
 
